# Super-CLEVR

./: .gitignore  README.md  TO_DO.md  environment.yml  pyproject.toml
image_generation/: preprocess_cgpart.py  super_restore_render_images.py  utils.py
output/: CLEVR_scenes.json  superCLEVR_scenes.json  val_cache_file_list.txt
output/labels/: superCLEVR_new_000000.txt  superCLEVR_new_000001.txt
output/scenes/: superCLEVR_new_000000.json  superCLEVR_new_000001.json
scripts/: generate_yolov5_labels.py  merge_scenes.py  preprocess_cgpart.sh  render_images.sh  super-clevr.yaml
