[tool.poetry]
name = "super-clevr"
version = "0.1.0"
description = "Super-CLEVR: A Virtual Benchmark to Diagnose Domain Robustness in Visual Reasoning"
authors = ["Michele Collevati <11272443+Colle11@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
urllib3 = "^1.26.16"
numpy = "^1.26.0"
pillow = "^10.0.1"
tensorflow = "^2.14.0"
opencv-python = "^4.8.1.78"
tqdm = "^4.66.1"
torchvision = "^0.16.2"
pyyaml = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
